--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,285 @@
 # Environments
 .env
+.venv/
+venv/
+env/
+ENV/
 
 # Python
 __pycache__/
-*.pyc
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# PyInstaller
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+.pytest_cache/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+*.ipynb
+
+# IPython
+profile_default/
+ipython_config.py
+
+# pyenv
+.python-version
+
+# pipenv
+Pipfile.lock
+
+# PEP 582
+__pypackages__/
+
+# Celery stuff
+celerybeat-schedule
+celerybeat.pid
+
+# SageMath parsed files
+*.sage.py
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pyre type checker
+.pyre/
 
 # Joblib
 *.joblib
 
-# Data
+# Data files
 *.csv
 *.zip
+*.xlsx
+*.xls
+*.json
+*.xml
+*.txt
+*.dat
+*.h5
+*.hdf5
+*.pkl
+*.pickle
 
-# Images
-/*.png
-/*.jpg
-*.jpg
+# Images and media
 *.png
-
-# Jupyter
-.ipynb_checkpoints/
-
-# IDEs
-.idea/
-.vscode/
-
-## Files
+*.jpg
+*.jpeg
+*.gif
+*.bmp
+*.tiff
+*.svg
+*.webp
+*.ico
 *.pdf
 *.webm
 *.mp4
+*.avi
+*.mov
+*.wmv
+*.flv
+*.mkv
 *.wav
 *.mp3
+*.aac
+*.ogg
+*.flac
 
+# Model files and weights
+*.pt
+*.pth
+*.onnx
+*.tflite
+*.h5
+*.pb
+*.ckpt
+*.safetensors
+*.bin
+
+# Temporary and cache files
+temp_uploads/
+temp/
+tmp/
+*.tmp
+*.temp
+*.cache
+*.log
+*.out
+*.aux
+*.fdb_latexmk
+*.fls
+*.synctex.gz
+*.toc
+*.lof
+*.lot
+*.bbl
+*.blg
+*.run.xml
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# IDE and editor files
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+.project
+.classpath
+.settings/
+*.sublime-project
+*.sublime-workspace
+
+# Project specific
 test-images/
 GEMINI.md
+test_*.py
+test_*.pdf
+test_*.tex
+test_*.log
+test_*.aux
+test_*.out
+demo_*.py
+demo_*.pdf
+demo_*.tex
+demo_*.log
+demo_*.aux
+demo_*.out
+screencapture-*.pdf
+temp_uploads/
+annotated_images/
+
+# LaTeX temporary files
+*.aux
+*.log
+*.out
+*.toc
+*.lof
+*.lot
+*.fls
+*.fdb_latexmk
+*.synctex.gz
+*.bbl
+*.blg
+*.run.xml
+
+# Streamlit
+.streamlit/
+
+# MLflow
+mlruns/
+mlflow.db
+
+# Weights and checkpoints
+weights/
+checkpoints/
+models/
+runs/
+logs/
+
+# Test outputs
+test_output.pdf
+medical_test_report.pdf
+unicode_test_output.pdf
+
+# ML/AI specific
+*.pkl
+*.pickle
+*.joblib
+*.h5
+*.hdf5
+*.pth
+*.pt
+*.onnx
+*.tflite
+*.pb
+*.ckpt
+*.safetensors
+*.bin
+*.model
+*.weights
+
+# Data files
+data/
+datasets/
+raw_data/
+processed_data/
+*.csv
+*.tsv
+*.xlsx
+*.xls
+*.json
+*.xml
+*.txt
+*.dat
+*.parquet
+*.feather
+*.h5
+*.hdf5
+*.npy
+*.npz
+
+# Model outputs and logs
+outputs/
+results/
+experiments/
+wandb/
+mlruns/
+logs/
+*.log
+*.out
+*.err
+
