--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,14 @@
-# Core LLM and Agent Framework
-langchain
-langchain-openai
-langgraph
-openai
-
-# Machine Learning & Data
-pandas
-scikit-learn
-joblib
-
-# Image Analysis (YOLO)
-ultralytics
-Pillow
-
-# Web Application (Streamlit)
-streamlit
-streamlit-mic-recorder
-
-# Utilities
-python-dotenv
-pydub
-python-docx
-pymupdf
+streamlit>=1.28.0
+streamlit-mic-recorder>=0.1.6
+openai>=1.0.0
+langchain>=0.1.0
+langchain-openai>=0.0.5
+langchain-core>=0.1.0
+langgraph>=0.0.20
+python-dotenv>=1.0.0
+PyMuPDF>=1.23.0
+python-docx>=0.8.11
+ultralytics>=8.0.0
+Pillow>=10.0.0
+numpy>=1.24.0
+markdown>=3.4.0
